--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,7 +1,24 @@
 #header {
 	margin-top: 30px;
 }
-
+.row {
+	margin-bottom: 0 !important;
+}
+.navbar {
+	margin-left: -10px !important;
+	margin-right: -10px !important;
+	font-family: barlow;
+}
+body {
+	font-family: barlow
+}
+p {
+    margin: 0 0 10px;
+    font-family: barlow;
+    font-weight: 300;
+    font-size: 1.5em;
+    margin: 20px;
+}
 #footer {
 	margin-top: 30px;
 	border-top: 1px solid #eeeeee;
@@ -36,8 +53,73 @@
 	width: 100%
 }
 .inner-center-button {
+	font-family: barlow;
+	color: black;
+	text-align: center;
+	font-weight: 700;
+	font-size:2em;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+	padding: 15px;
+	border-radius: 3px;
+	background: RGBA(234,170,31,.9)
+}
+#header {
+	margin-top: 0px;
+}
+.navbar {
+	margin-bottom: 0px;
+
+}
+.navbar {
+	background-color: white !important;
+}
+.navbar-nav>li>a {
+	color: black;
+	font-weight: 700;
+	font-size: 20px;
+	margin: 5px;
+}
+.navbar 
+.joblisting {
+	border-radius: 12px;
+	border: 3px solid black;
+}
+.quote {
+	margin: 35px;
+}
+.jobsearchin {
+	border-radius: 5px;
+	font-family: barlow;
+	font-weight: 400;
+	border: none;
+	border-color: white;
+	outline-color: white;
+	outline: none;
+	margin: 5px;
+	background-color: RGBA(0,0,0,0);
+	height: 70px;
+	width: 250px;
+	color: white;
+	text-decoration-color: white;
+	font-size: 2em !important;
+	height: 1rem;
+	padding: 15px !important;
+}
+.jobsearchin::-webkit-input-placeholder {
+	color: white;
+	font-family: barlow;
+	font-weight: 400;
+	
+}
+.topcolor {
+	border-top: 2px solid white;
+}
+.bottomcolor {
+	border-bottom: 2px solid white;
+}
+.smaller {
+	font-size: 28px !important;
 }
