--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -6,8 +6,17 @@ html
 	//- HTML HEADER
 	head
 		meta(charset="utf-8")
+		script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
+
+
+
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
+		// Compiled and minified CSS
+
+		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css')
+		// Compiled and minified JavaScript
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js')
 
 		title= title || 'FBLA'
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
@@ -37,12 +46,12 @@ html
 	body
 
 		//- HEADER
-		#header: .container
+		#header: .container-fluid
 
 			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 			//- ... or completely change this header to suit your design.
 
-			div(role="navigation").navbar.navbar-default
+			div(role="navigation").navbar.navbar-default.navbar-fixed-top
 				.container-fluid
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -50,7 +59,7 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') FBLA
+						//- a.navbar-brand(href='/') FBLA
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
@@ -82,10 +91,21 @@ html
 
 
 		//- FOOTER
-		.container: #footer
-
-			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+		#footer
+				footer.page-footer.blue.center-on-small-only
+					.container-fluid
+						.row
+						.col-md-6
+							h5.title Name
+							p Company Name is committed to providing the best experience. For comments and suggestion, please email us!
+						.col-md-6
+							h5.title Links
+							ul(style="color: white;")
+								each link in navLinks
+									li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
+					.footer-copyright
+						.container-fluid
+						| © 2018 FBLA
 
 
 		//- JAVASCRIPT
