--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -2,32 +2,26 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/resume.jpg'); min-height: 1000px; background-size: cover;")
-			.col-md-4
-				h2.heading(style="font-size: 4em;") Resume Templates and Tips
+		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/application.jpg'); min-height: 1000px; background-size: cover;")
+					div(style="padding: 20px; width: 100%; margin-top: 100px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+						h2.heading(style="font-size: 4em;") Job Application Tips
 
 					
 		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
 			.row
 				.container
-					.col-sm-3
-						a(href="/templates/resume 1.dotx")
-							img(src="/images/resume1.jpg", style="width: 100%")
-					.col-sm-3
-						a(href="/templates/resume 2.dotx")
-							img(src="/images/resume2.jpg", style="width: 100%")
 					.col-md-6
-						h1(style="margin-top: 70px;") Templates for Résumés and Coverletters
+						img(src="/images/11.png", style="width: 100%")
+					.col-md-6
+						img(src="/images/12.png", style="width: 100%")
 			.row
 				.container
-					.col-md-3
-						a(href="/templates/cover letter.dotx")
-							img(src="/images/coverletter1.jpg", style="width: 100%")
-					.col-md-3
-						a(href="/templates/cover letter.docx")
-							img(src="/images/coverletter2.jpg", style="width: 100%")
+					.col-md-6
+						img(src="/images/21.png", style="width: 100%")
+					.col-md-6
+						img(src="/images/22.png", style="width: 100%")
 		.row
-			.container(style="padding: 15px;")
+			.container
 				ol(style="font-size: 20px;")
 					li Formating
 						ol
