--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -2,46 +2,31 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="background-color: #1b1a1e; padding-top: 50px; padding-bottom: 50px;")
-			.page-part#index-header
-				.col-sm-6
-					h2.heading(style="font-size: 4em;") FIND YOUR JOB
-					br
-					h1.heading(style="font-size: 6em; text-decoration: underline;") NOW
-		.row(style="background-image: url('/images/about-us.png');")
+		.row(style="display:flex;align-items:center; background-image: url('/images/homeheader.jpg'); height: 1000px; padding-top: 100px; padding-bottom: 100px;")
+			div(style="padding: 20px; width: 100%; margin-top: 220px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+				h2.heading(style="font-size: 4em; color: e2e2da;") FIND YOUR JOB
+				br
+				h1.heading(style="font-size: 6em; text-decoration: underline;  color: e2e2da;") NOW
+						
+		.row(style="background-image: url('/images/about-us.png');  padding-top: 100px; padding-bottom: 100px;")
 			.page-part
 				.col-sm-4
 					h1.heading ABOUT US
-					h1 Welcome
-					p This is your new <a href='http://keystonejs.com' target='_blank'>KeystoneJS</a> website.
-					p It includes the latest versions of
-						| <a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
-						| and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
-					p Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.
-					hr
-					if user && user.canAccessKeystone
-						p
-							a(href='/keystone').btn.btn-lg.btn-primary Open the Admin UI
-					else
-						p We have created a default Admin user for you with the email <strong>pavanagrawal@outlook.com</strong> and the password <strong>admin</strong>.
-						p
-							a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
-							|  to use the Admin UI.
-					hr
-					p Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
-						| <a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
-		.row(style="background-color: #1b1a1e; padding-top: 50px; padding-bottom: 50px;")
+					p For more than a decade, [Company’s name here] is a global leader in connecting the perfect jobs to people, for more than a decade. We has helped people improve their lives with better jobs by providing some of the broadest, most sophisticated job seeking. [Company’s name here] continues to provides service all over the United States and expanding our service to neighbor countries. 
+		.row(style="background-color: #1b1a1e; padding-top: 100px; padding-bottom: 100px;")
 			.container
 				.row
 					.col-sm-4
-						img(src="/images/index1.png").third-index
-						.inner-center-button Test
+						a(href="/jobsearch")
+							img(src="/images/index1.png").third-index
+							.inner-center-button Find A Job
 					.col-sm-4
-						img(src="/images/index2.png").third-index
-						.inner-center-button Test
+						a(href="/resume")
+							img(src="/images/index2.png").third-index
+							.inner-center-button Resume Tips and Templates
 					.col-sm-4
 						img(src="/images/index3.png").third-index
-						.inner-center-button Test
+						.inner-center-button Application Tips
 		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
 			.quote
-				h1 Blahshshshshshsh
+				h1 [name] got me my first job right after I graduated college! Very professional, I reccomend them!
