--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -2,24 +2,34 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/jobsearchheader.png'); min-height: 400px; background-size: cover;")
-			.col-md-4(style="")
-				input
-				br
-				input
-				br
-				button
-					
-		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
+		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/buildings.jpg'); min-height: 1000px; background-size: cover;")
+			div(style="padding: 20px; width: 100%; margin-top: 0px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+				.col-md-4(style="")
+					h1.smaller(style="margin-bottom: 20px;") Search Directly On 
+					input(placeholder="Job Keyword or Title").jobsearchin.topcolor
+					br
+					input(placeholder="Location").jobsearchin.bottomcolor
+
+		.row(style="background-color: black; padding-top: 50px; padding-bottom: 50px;")
+			
+			.row
+				.container
+					h1.smaller(style="color: white") Other Sources For More Jobs
+					.col-md-6
+						a(href="https://linkedin.com")
+							img(src="/images/jobsearch1.jpg", style="width: 100%")
+							.inner-center-button LinkedIn
+					.col-md-6
+						a(href="https://monster.com")
+							img(src="/images/jobsearch2.jpg", style="width: 100%")
+							.inner-center-button Monster
 			.row
 				.container
 					.col-md-6
-						img(src="/images/jobsearch1.png", style="width: 100%")
+						a(href="https://indeed.com")
+							img(src="/images/jobsearch3.jpg", style="width: 100%")
+							.inner-center-button Indeed
 					.col-md-6
-						img(src="/images/jobsearch2.png", style="width: 100%")
-			.row
-				.container
-					.col-md-6
-						img(src="/images/jobsearch3.png", style="width: 100%")
-					.col-md-6
-						img(src="/images/jobsearch4.png", style="width: 100%")
+						a(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
+							img(src="/images/jobsearch4.jpg", style="width: 100%")
+							.inner-center-button Google Job Search
