--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -33,3 +33,19 @@ block content
 						a(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
 							img(src="/images/jobsearch4.jpg", style="width: 100%")
 							.inner-center-button Google Job Search
+		.row
+			.container
+				.col-md-6
+					p Finding jobs can be incredibly difficult, therefore, we have tried to make it as easy as possible. Above you will find links to different job hunting websites that allow you to search vast databases of jobs. 
+					p Also, you can search in our curated database of high quality jobs! These jobs are thoroughly vetted in order to make sure that they are of the highest quality! 
+				.col-md-6
+					h2 Some tips for finding jobs:
+					ul 
+						li Looks for jobs that appeal to you and interest you. The more interest you have, the more likely you are to do better in the interview.
+						li Find jobs you are passionate about. You are a lot more likely to get a job that you have a passion for versus a job you are merely applying to get benefits. 
+						li Don’t be discouraged when you got rejected. Don’t stop applying for your job. 
+						li You can find local jobs that required native language, and knowledge, which will give you an advantage over others. 
+						li Don’t limit yourself to only online job search. Search for jobs in local newspaper, flyers, etc.
+						li Don’t be afraid to search for jobs that are out of your comfort zone, however research your job and learn as much as you can about it before going into interview.
+						li Use job alerts to sign up and receive job listings by email. All the major job sites have search agents and some websites and apps specialize in sending announcements.
+						li Look on your social media for jobs. Small and growing companies often only post jobs on Facebook, Instagram, etc. 
