--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -123,3 +123,9 @@ p {
 .smaller {
 	font-size: 28px !important;
 }
+@media only screen and (max-width: 768px) {
+	.navbar {
+		margin-left: 0 !important;
+		margin-right: 0 !important;
+	}
+}
