--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -124,7 +124,7 @@ p {
 	font-size: 28px !important;
 }
 @media only screen and (max-width: 768px) {
-	.navbar {
+	.navbar-header {
 		margin-left: 0 !important;
 		margin-right: 0 !important;
 	}
