--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -125,7 +125,7 @@ p {
 }
 @media only screen and (max-width: 768px) {
 	.navbar-header {
-		margin-left: 0 !important;
-		margin-right: 0 !important;
+		margin-left: 15px !important;
+		margin-right: 15px !important;
 	}
 }
