--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -5,37 +5,17 @@ block content
 		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/application.jpg'); min-height: 1000px; background-size: cover;")
 					div(style="padding: 20px; width: 100%; margin-top: 100px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 						h2.heading(style="font-size: 4em;") Job Application Tips
-
-					
-		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
-			.row
-				.container
-					.col-md-6
-						img(src="/images/11.png", style="width: 100%")
-					.col-md-6
-						img(src="/images/12.png", style="width: 100%")
-			.row
-				.container
-					.col-md-6
-						img(src="/images/21.png", style="width: 100%")
-					.col-md-6
-						img(src="/images/22.png", style="width: 100%")
 		.row
 			.container
+				h2 Job Application Tips
 				ol(style="font-size: 20px;")
-					li Formating
-						ol
-							li Use a logical format and wide margins, clean type and clear headings
-							li Selectively apply bold and italic typeface that help guide the reader's eye
-							li Use bullets to call attention to important points (i.e. accomplishments)
-					li Full Contact Information 
-					li Check for grammar and spelling errors 
-					li Quantify accomplishments 
-					li Keep resume updated 
-					li Use our professionally design resume template. To use our template, please follow the following steps:
-						ol
-							li Download our templates with the links above.
-							li Open them in Word or Google Docs
-							li Change the fields to match your information, such as names, addresses, and work experience.
-					li Make sure your resume is viewable by everyone by converting it to a PDF
-
+					li Research about the job you are applying for. 
+					li Fill in information with readable and neat handwriting. 
+					li If there is any confusion about the application, contact the hiring manager, they can help you out with the application. 
+					li Use a spell checker if you’re filling out on an online application, silly spelling mistakes give a bad impression. 
+					li Provide updated information in your application and attaching documents.
+					li Clean up your public social media profiles since most companies will check your online status.
+					li Apply for online application if possible. Most people rush when fill out application, so online application will help relieve that stress. 
+					li Choose a reference, family or employer,  that will give you positive recommendation. 
+					li Make sure all fields are filled in, blanks never look good on an application. And don’t make up answers.  
+					li After filling in applications, reread over the application. Ask a friend to read it over, if available.
