--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -5,7 +5,7 @@ block content
 		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/application.jpg'); min-height: 1000px; background-size: cover;")
 					div(style="padding: 20px; width: 100%; margin-top: 100px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 						h2.heading(style="font-size: 4em;") Job Application Tips
-		.row
+		.row(style="margin: 20px;")
 			.container
 				h2 Job Application Tips
 				ol(style="font-size: 20px;")
