--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -41,7 +41,7 @@ block content
 					p Also, you can search in our curated database of high quality jobs! These jobs are thoroughly vetted in order to make sure that they are of the highest quality! 
 				.col-md-6
 					h2 Some tips for finding jobs:
-					ul 
+					ol(style="font-size: 20px; margin: 5px;")
 						li Looks for jobs that appeal to you and interest you. The more interest you have, the more likely you are to do better in the interview.
 						li Find jobs you are passionate about. You are a lot more likely to get a job that you have a passion for versus a job you are merely applying to get benefits. 
 						li Don’t be discouraged when you got rejected. Don’t stop applying for your job. 
