--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -10,6 +10,7 @@ block content
 						input(placeholder="Job Keyword or Title").jobsearchin.topcolor
 						br
 						input(placeholder="Location").jobsearchin.bottomcolor
+						button.jobsearchin(type="submit") Go!
 
 		.row(style="background-color: black; padding-top: 50px; padding-bottom: 50px;")
 			
