--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -59,7 +59,8 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						//- a.navbar-brand(href='/') FBLA
+						a.navbar-brand(href='/') 
+							img(src="/images/logo.png")
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
