--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -5,7 +5,7 @@ block content
 		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/buildings.jpg'); min-height: 1000px; background-size: cover;")
 			div(style="padding: 20px; width: 100%; margin-top: 0px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 				.col-md-4(style="")
-					form(action="/job")
+					form(action="/joblist")
 						h1.smaller(style="margin-bottom: 20px;") Search Directly On 
 						input(placeholder="Job Keyword or Title").jobsearchin.topcolor
 						br
