--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -59,7 +59,7 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') 
+						a.navbar-brand(href='/' style="margin: 2px; width: 200px;") 
 							img(src="/images/logo.png")
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
