--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -59,8 +59,8 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/' style="margin: 2px; width: 200px;") 
-							img(src="/images/logo.png")
+						a.navbar-brand(href='/') 
+							img(src="/images/logo.png",  style="margin: 2px; width: 200px;")
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
