--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -98,7 +98,7 @@ html
 						.row
 						.col-md-6
 							h5.title Name
-							p Company Name is committed to providing the best experience. For comments and suggestion, please email us!
+							p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
 						.col-md-6
 							h5.title Links
 							ul(style="color: white;")
@@ -106,7 +106,7 @@ html
 									li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
 					.footer-copyright
 						.container-fluid
-						| © 2018 FBLA
+						| © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed. 
 
 
 		//- JAVASCRIPT
