--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -10,9 +10,9 @@ block content
 						
 		.row(style="background-image: url('/images/about-us.png');  padding-top: 100px; padding-bottom: 100px;")
 			.page-part
-				.col-sm-4
+				.col-sm-4(style="background-color: RGBA(100,100,100,.4);")
 					h1.heading ABOUT US
-					p For more than a decade, [Company’s name here] is a global leader in connecting the perfect jobs to people, for more than a decade. We has helped people improve their lives with better jobs by providing some of the broadest, most sophisticated job seeking. [Company’s name here] continues to provides service all over the United States and expanding our service to neighbor countries. 
+					p For more than a decade, Vocation.Today has been a global leader in connecting the perfect jobs to people. We have helped people improve their lives with better jobs by providing some of the most well kept secrets about job hunting. Vocation.Today continues to provides services all over the United States and is expanding service to neighboring countries. 
 		.row(style="background-color: #1b1a1e; padding-top: 100px; padding-bottom: 100px;")
 			.container
 				.row
@@ -29,4 +29,4 @@ block content
 						.inner-center-button Application Tips
 		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
 			.quote
-				h1 [name] got me my first job right after I graduated college! Very professional, I reccomend them!
+				h1 Vocation.Today got me my first job right after I graduated college! Very professional, I recommend them!
