--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -17,7 +17,7 @@ block content
 				h3 On the day of the interview, remember to:
 				ol(style="font-size: 22px;")
 					li Plan your schedule so you arrive 10 to 15 minutes early.
-					li Be prepare with resume and portfolio. 
+					li Be prepared with resume and portfolio. 
 					li Look professional. Dress in a manner appropriate to the job.
 					li Leave your MP3 player, coffee, soda, or backpack at home or in your car.
 					li Turn off your cell phone.
