--- a/templates/views/resume.pug
+++ b/templates/views/resume.pug
@@ -31,14 +31,14 @@ block content
 				ol(style="font-size: 20px;")
 					li Formating
 						ol
-							li Use a logical format and wide margins, clean type and clear headings
-							li Selectively apply bold and italic typeface that help guide the reader's eye
-							li Use bullets to call attention to important points (i.e. accomplishments)
+							li Use a logical format and wide margins, clean type and clear headings.
+							li Selectively apply bold and italic typeface that help guide the reader's eye.
+							li Use bullets to call attention to important points (i.e. accomplishments).
 					li Full Contact Information 
 					li Check for grammar and spelling errors 
 					li Quantify accomplishments 
 					li Keep resume updated 
-					li Use our professionally design resume template. To use our template, please follow the following steps:
+					li Use our professionally designed resume templates. To use our templates, please follow the following steps:
 						ol
 							li Download our templates with the links above.
 							li Open them in Word or Google Docs
