--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -6,7 +6,7 @@ block content
 			div(style="padding: 20px; width: 100%; margin-top: 0px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 				.col-md-4(style="")
 					form(action="/joblist")
-						h1.smaller(style="margin-bottom: 20px;") Search Directly On 
+						h1.smaller(style="margin-bottom: 20px;") Search Directly On Vocation.Today
 						input(placeholder="Job Keyword or Title").jobsearchin.topcolor
 						br
 						input(placeholder="Location").jobsearchin.bottomcolor
