logo change + user

--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -18,7 +18,7 @@ html
 		// Compiled and minified JavaScript
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js')
 
-		title= title || 'FBLA'
+		title= title || 'Vocation.Today'
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
@@ -60,7 +60,7 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/') 
-							img(src="/images/logo.png",  style="margin: 2px; width: 200px;")
+							img(src="/images/logo.png",  style="margin: 2px; width: 200px; margin-top: -5px;")
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
