--- a/templates/views/job.pug
+++ b/templates/views/job.pug
@@ -16,8 +16,7 @@ block content
 									=job.title
 							.card-content
 								p
-								| I am a very simple card. I am good at containing small bits of information.
-								| I am convenient because I require little markup to use effectively.
+									= job.content.brief
 							.card-action
-								a(href='#') This is a link
+								a(href='#') Register Now!
 
