--- a/templates/views/job.pug
+++ b/templates/views/job.pug
@@ -15,7 +15,7 @@ block content
 								span.card-title 
 									=job.title
 							.card-content
-								= !{job.content.brief}
+								!{job.content.brief}
 							.card-action
 								a(href='#') Register Now!
 
