--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -25,8 +25,9 @@ block content
 							img(src="/images/index2.png").third-index
 							.inner-center-button Resume Tips and Templates
 					.col-sm-4
-						img(src="/images/index3.png").third-index
-						.inner-center-button Application Tips
+						a(href="/application")
+							img(src="/images/index3.png").third-index
+							.inner-center-button Application Tips
 		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
 			.quote
 				h1 Vocation.Today got me my first job right after I graduated college! Very professional, I recommend them!
