--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -90,7 +90,7 @@ html
 					.container-fluid
 						.row
 						.col-md-6
-							h5.title Name
+							h5.title Vocation.Today
 							p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
 						.col-md-6
 							h5.title Links
