--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -30,4 +30,4 @@ block content
 							.inner-center-button Application Tips
 		.row(style="background-color: #eaaa1f; padding-top: 50px; padding-bottom: 50px;")
 			.quote
-				h1 "Vocation.Today got me my first job right after I graduated college! Very professional, I recommend them!" - Previous Customer
+				h1 "Vocation.Today got me my first job right after I graduated college! Very professional, I recommend them!" - Neel Narayan
