--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -46,8 +46,8 @@ block content
 						li Looks for jobs that appeal to you and interest you. The more interest you have, the more likely you are to do better in the interview.
 						li Find jobs you are passionate about. You are a lot more likely to get a job that you have a passion for versus a job you are merely applying to get benefits. 
 						li Don’t be discouraged when you got rejected. Don’t stop applying for your job. 
-						li You can find local jobs that required native language, and knowledge, which will give you an advantage over others. 
-						li Don’t limit yourself to only online job search. Search for jobs in local newspaper, flyers, etc.
-						li Don’t be afraid to search for jobs that are out of your comfort zone, however research your job and learn as much as you can about it before going into interview.
+						li You can find jobs that require you to speak your native language, which will give you an advantage over others. 
+						li Don’t limit yourself to only online job searches. Search for jobs in local newspaper, flyers, etc.
+						li Don’t be afraid to search for jobs that are out of your comfort zone; research your job and learn as much as you can about it before going into interview.
 						li Use job alerts to sign up and receive job listings by email. All the major job sites have search agents and some websites and apps specialize in sending announcements.
 						li Look on your social media for jobs. Small and growing companies often only post jobs on Facebook, Instagram, etc. 
