--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -12,10 +12,10 @@ block content
 					li Research about the job you are applying for. 
 					li Fill in all the fields with readable and neat handwriting. 
 					li If there is any confusion about the application, contact the hiring manager, they can help you out with the application. 
-					li Use a spell checker if you’re filling out on an online application, silly spelling mistakes give a bad impression. 
+					li Use a spell checker if you are filling out on an online application, silly spelling mistakes give a bad impression. 
 					li Provide updated information in your application and attached documents.
 					li Clean up your public social media profiles, since most companies will check your online status.
-					li Apply using online application if possible. Most people rush when fill out applications, and are error prone. Online applications make it easy to fix mistakes. 
-					li Choose a reference, family or employer,  that will give you positive recommendation. 
-					li Make sure all fields are filled in, blanks never look good on an application. Also, don’t make up answers.  
-					li After filling in applications, reread over the application. Ask a friend to read it over, if available.
+					li Apply using an online application if possible. Most people rush when filling out applications, and are likely to make mistakes. Online applications make it easy to fix mistakes. 
+					li Choose a reference, that will give you a positive recommendation. 
+					li Make sure all fields are filled in, blanks never look good on an application. Also, do not falsify information.  
+					li After filling in applications, reread over the application. Ask someone to read it over.
