--- a/templates/views/resume.pug
+++ b/templates/views/resume.pug
@@ -29,12 +29,12 @@ block content
 		.row
 			.container(style="padding: 15px;")
 				ol(style="font-size: 20px;")
-					li Formating
+					li Formatting
 						ol
-							li Use a logical format and wide margins, clean type and clear headings.
-							li Selectively apply bold and italic typeface that help guide the reader's eye.
-							li Use bullets to call attention to important points (i.e. accomplishments).
-					li Full Contact Information 
+							li Use a logical format and wide margins, clean type and clear headings
+							li Selectively apply bold and italic typeface that help guide the reader's eyes.
+							li Use bullets to call attention to important points (i.e. accomplishments)
+					li Full contact information 
 					li Check for grammar and spelling errors 
 					li Quantify accomplishments 
 					li Keep resume updated 
@@ -42,6 +42,6 @@ block content
 						ol
 							li Download our templates with the links above.
 							li Open them in Word or Google Docs
-							li Change the fields to match your information, such as names, addresses, and work experience.
+							li Change the fields to match your information, such as name, addresses, and work experience.
 					li Make sure your resume is viewable by everyone by converting it to a PDF
 
