--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -4,15 +4,15 @@ block content
 	.container-fluid
 		.row(style="display:flex;align-items:center; background-image: url('/images/homeheader.jpg'); height: 1000px; padding-top: 100px; padding-bottom: 100px;")
 			div(style="padding: 20px; width: 100%; margin-top: 220px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
-				h2.heading(style="font-size: 4em; color: e2e2da;") FIND YOUR JOB
+				h2.heading(style="font-size: 4em; color: e2e2da;") LAND YOUR DREAM JOB
 				br
-				h1.heading(style="font-size: 6em; text-decoration: underline;  color: e2e2da;") NOW
+				h1.heading(style="font-size: 6em; text-decoration: underline;  color: e2e2da;") TODAY
 						
 		.row(style="background-image: url('/images/about-us.png');  padding-top: 100px; padding-bottom: 100px;")
 			.page-part
 				.col-sm-4(style="background-color: RGBA(100,100,100,.4);")
 					h1.heading ABOUT US
-					p For more than a decade, Vocation.Today has been a global leader in connecting the perfect jobs to people. We have helped people improve their lives with better jobs by providing some of the most well kept secrets about job hunting. Vocation.Today continues to provides services all over the United States and is expanding service to neighboring countries. 
+					p For more than a decade, Vocation.Today has been a global leader in bringing the perfect jobs to people all around the world. We have helped thousands improve their lives with better jobs by providing some of the most well-kept secrets about job hunting. Vocation.Today continues to provides services all over the United States and is rapidly expanding to neighboring countries. 
 		.row(style="background-color: #1b1a1e; padding-top: 100px; padding-bottom: 100px;")
 			.container
 				.row
