--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -86,13 +86,13 @@ html
 
 		//- FOOTER
 		#footer
-				footer.page-footer.blue.center-on-small-only
+				footer.page-footer.blue.center-on-small-only(style="margin-left:auto;margin-right:auto;")
 					.container-fluid
 						.row
-						.col-md-6
+						.col-md-4
 							h5.title Vocation.Today
 							p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
-						.col-md-6
+						.col-md-4
 							h5.title Links
 							ul(style="color: white;")
 								each link in navLinks
