--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -86,17 +86,17 @@ html
 
 		//- FOOTER
 		#footer
-				footer.page-footer.blue.center-on-small-only(style="margin-left:auto;margin-right:auto;")
+				footer.page-footer.blue.center-on-small-only
 					.container-fluid
-						.row
-						.col-md-4
-							h5.title Vocation.Today
-							p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
-						.col-md-4
-							h5.title Links
-							ul(style="color: white;")
-								each link in navLinks
-									li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
+						.row(style="margin-left:auto;margin-right:auto;")
+							.col-md-4
+								h5.title Vocation.Today
+								p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
+							.col-md-4
+								h5.title Links
+								ul(style="color: white;")
+									each link in navLinks
+										li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
 					.footer-copyright
 						.container-fluid
 						| © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed. 
