--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -88,7 +88,7 @@ html
 		#footer
 				footer.page-footer.blue.center-on-small-only
 					.container-fluid
-						.row(style="margin-left:auto;margin-right:auto;")
+						.contain(style="margin-left:auto;margin-right:auto;")
 							.col-md-4
 								h5.title Vocation.Today
 								p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
