--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -4,6 +4,9 @@
 .row {
 	margin-bottom: 0 !important;
 }
+label {
+	font-size: 20px;
+}
 .navbar {
 	margin-left: -10px !important;
 	margin-right: -10px !important;
