--- a/templates/views/job.pug
+++ b/templates/views/job.pug
@@ -6,6 +6,7 @@ block intro
 	
 block content
 	.container
+		h1 This page is still under construction!
 		each job in jobs
 				.row
 					.col.s12.m7
