--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -93,7 +93,7 @@ html
 								h5.title Vocation.Today
 								p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. 
 							.col-md-4
-								h5.title Links
+								h5.title Pages
 								ul(style="color: white;")
 									each link in navLinks
 										li(class=(section == link.key ? 'active' : null)): a(style="color: white;", href=link.href)= link.label
