--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -20,6 +20,7 @@ block content
 					li Make sure all fields are filled in, blanks never look good on an application. Also, do not falsify information.  
 					li After filling in applications, reread over the application. Ask someone to read it over.
 		.row
-			h1 Some Useful Videos to Review:
-			iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/sWo9VHZChG0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
-			iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/sWo9VHZChG0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+			.container
+				h1 Helpful Videos:
+				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/sWo9VHZChG0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/xyFlWaLR6wI', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
