--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -12,7 +12,11 @@ block content
 			.page-part
 				.col-sm-4(style="background-color: RGBA(100,100,100,.4);")
 					h1.heading ABOUT US
-					p For more than a decade, Vocation.Today has been a global leader in bringing the perfect jobs to people all around the world. We have helped thousands improve their lives with better jobs by providing some of the most well-kept secrets about job hunting. Vocation.Today continues to provides services all over the United States and is rapidly expanding to neighboring countries. 
+					p For more than a decade, 
+						strong Vocation.Today 
+						| has been a global leader in bringing the perfect jobs to people all around the world. We have helped thousands improve their lives with better jobs by providing some of the most well-kept secrets about job hunting. 
+						strong Vocation.Today 
+						| continues to provides services all over the United States and is rapidly expanding to neighboring countries. 
 		.row(style="background-color: #1b1a1e; padding-top: 100px; padding-bottom: 100px;")
 			.container
 				.row
