--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -91,7 +91,7 @@ html
 						.contain(style="margin-left:auto;margin-right:auto;")
 							.col-md-4
 								h5.title Vocation.Today
-								p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. Video embed rights are respected. 
+								p  © 2018 FBLA - Pavan Agrawal and Thanh Le. All image licensing is followed and respected. All software licenses are respected. Source code of website is available upon request. Video embed rights are respected. Image license terms can be found over here: https://unsplash.com/license
 							.col-md-4
 								h5.title Pages
 								ul(style="color: white;")
