--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -14,6 +14,12 @@ block content
 				p Figure out in advance how well you qualify for the job. For each requirement listed in the job posting, write down your qualifications. This can show you if you lack a particular skill. 
 				h3 Make a list of questions that you would like to ask during the interview. 
 				p Pick questions that will demonstrate your interest in the job and the company. This might include commenting on the information you learned from the company website, and then asking a question related to it.
+	.container-fluid
+		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/interviewday.jpg'); min-height: 600px; background-size: cover;")
+					div(style="padding: 20px; width: 100%; margin-top: 100px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+						h2.heading(style="font-size: 4em;") Day Of The Interview
+		.container
+			.row
 				h3 On the day of the interview, remember to:
 				ol(style="font-size: 22px;")
 					li Plan your schedule so you arrive 10 to 15 minutes early.
