--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -2,7 +2,7 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/interviews.jpg'); min-height: 1000px; background-size: cover;")
+		.hero.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/interviews.jpg'); min-height: 1000px; background-size: cover;")
 					div(style="padding: 20px; width: 100%; margin-top: 100px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 						h2.heading(style="font-size: 4em;") Job Interview Tips
 
