--- a/templates/views/resume.pug
+++ b/templates/views/resume.pug
@@ -2,7 +2,7 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/resume.jpg'); min-height: 1000px; background-size: cover;")
+		.hero.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/resume.jpg'); min-height: 1000px; background-size: cover;")
 			.col-md-4
 				h2.heading(style="font-size: 4em;") Resume Templates and Tips
 
