--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -2,7 +2,7 @@ extends ../layouts/default
 
 block content
 	.container-fluid
-		.row(style="display:flex;align-items:center; background-image: url('/images/homeheader.jpg'); height: 1000px; padding-top: 100px; padding-bottom: 100px;")
+		.hero.row(style="display:flex;align-items:center; background-image: url('/images/homeheader.jpg'); height: 1000px; padding-top: 100px; padding-bottom: 100px;")
 			div(style="padding: 20px; width: 100%; margin-top: 220px; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
 				h2.heading(style="font-size: 4em; color: e2e2da;") LAND YOUR DREAM JOB
 				br
