--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -132,9 +132,16 @@ p {
 	}
 }
 body {
-	overflow-x: hidden;
+	overflow: hidden;
+	overflow-y: auto;
 }
 .hero {
 	background-repeat: no-repeat;
     background-attachment: fixed;
+}
+ol.resformat > li {
+	font-size: 20px;
+}
+.resformat {
+	padding: 20px;
 }
