--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -5,7 +5,7 @@ html
 
 	//- HTML HEADER
 	head
-		meta(charset="utf-8")
+		meta(charset="utf-8", name="viewport", content="width=device-width")
 		script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
 
 
@@ -86,7 +86,7 @@ html
 
 		//- FOOTER
 		#footer
-				footer.page-footer.blue.center-on-small-only
+				footer.page-footer.center-on-small-only(style="background-color: RGBA(80, 98, 127, .6);")
 					.container-fluid
 						.contain(style="margin-left:auto;margin-right:auto;")
 							.col-md-4
