--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -10,7 +10,7 @@ block content
 						input(placeholder="Job Keyword or Title", name="job").jobsearchin.topcolor
 						br
 						input(placeholder="Location").jobsearchin.bottomcolor
-						button.jobsearchin(type="submit") Go!
+						button.jobsearchin(type="submit", style="background-color: rgba(99, 123, 106, 0.5);") Go!
 
 		.row(style="background-color: black; padding-top: 50px; padding-bottom: 50px;")
 			
