--- a/templates/views/resume.pug
+++ b/templates/views/resume.pug
@@ -27,21 +27,43 @@ block content
 						a(href="/templates/cover letter.docx")
 							img(src="/images/coverletter2.jpg", style="width: 100%")
 		.row
-			.container(style="padding: 15px;")
-				ol(style="font-size: 20px;")
-					li Formatting
-						ol
-							li Use a logical format and wide margins, clean type and clear headings
-							li Selectively apply bold and italic typeface that help guide the reader's eyes.
-							li Use bullets to call attention to important points (i.e. accomplishments)
-					li Full contact information 
-					li Check for grammar and spelling errors 
-					li Quantify accomplishments 
-					li Keep resume updated 
-					li Use our professionally designed resume templates. To use our templates, please follow the following steps:
-						ol
-							li Download our templates with the links above.
-							li Open them in Word or Google Docs
-							li Change the fields to match your information, such as name, addresses, and work experience.
+			.hero.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/res formatting.jpg'); min-height: 1000px; background-size: cover;")
+				.col-md-4
+					h2.heading(style="font-size: 4em; color: white;") Resume Formatting
+			.container
+				ol.resformat(style="font=size: 20px;")
+					li Use a logical format and wide margins, clean type and clear headings
+					li Selectively apply bold and italic typeface that help guide the reader's eyes.
+					li Use bullets to call attention to important points (i.e. accomplishments)
+					li Don't make the resume too complicated. Simple is better!
+					li If a resume is too squished, most readers will glaze over it, rather than reading it. Make sure to have appropriate free space.
+					li Try not to use too many graphics. Stick to what's pertinent.
+					li After printing your resume, don't crinkle or bend it. 
+					li Don't change fonts or font sizes often.
+					li Don't use a handwritten resume, it is considered unprofessional.
+		.row
+			.hero.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/resume template.jpg'); min-height: 1000px; background-size: cover;")
+				.col-md-4
+					div(style="padding: 20px; width: 100%; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+						h2.heading(style="font-size: 4em;") How To Use Resume Templates
+			.container(style="padding: 20px;")
+				h2(style="font-size: 24px;") To use our templates, please follow the following steps:
+					ol.resformat
+						li Download our templates with the links above.
+						li Open them in Word or Google Docs
+						li Change the fields to match your information, such as name, addresses, and work experience.
+						li Print them out and verify that all information is accurate.
+						li Save the resume as a PDF, in order to make sure it is compatible with all platforms.
+		.row
+			.hero.row(style="display:flex;justify-content:center;align-items:center; background-image: url('/images/otherresume.jpg'); min-height: 1000px; background-size: cover;")
+				.col-md-4
+					div(style="padding: 20px; width: 100%; background-color: RGBA(80, 98, 127, .6); color: #e2e2da;")
+						h2.heading(style="font-size: 4em;") Other Resume Tips
+			.container(style="padding: 20px;")
+				ol.resformat
+					li Include full contact information
+					li Check for grammar and spelling errors
+					li Quantify accomplishments
+					li Keep your resume updated 
 					li Make sure your resume is viewable by everyone by converting it to a PDF
 
