--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -145,3 +145,5 @@ ol.resformat > li {
 .resformat {
 	padding: 20px;
 }
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.5); }
