--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -18,21 +18,21 @@ block content
 				.container
 					h1.smaller(style="color: white") Other Sources For More Jobs
 					.col-md-6
-						a(href="https://linkedin.com")
+						a(href="https://linkedin.com").grow
 							img(src="/images/jobsearch1.jpg", style="width: 100%")
 							.inner-center-button LinkedIn
 					.col-md-6
-						a(href="https://monster.com")
+						a(href="https://monster.com").grow
 							img(src="/images/jobsearch2.jpg", style="width: 100%")
 							.inner-center-button Monster
 			.row
 				.container
 					.col-md-6
-						a(href="https://indeed.com")
+						a(href="https://indeed.com").grow
 							img(src="/images/jobsearch3.jpg", style="width: 100%")
 							.inner-center-button Indeed
 					.col-md-6
-						a(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
+						a.grow(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
 							img(src="/images/jobsearch4.jpg", style="width: 100%")
 							.inner-center-button Google Job Search
 		.row
