--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -17,8 +17,8 @@ block content
 			.row
 				.container
 					h1.smaller(style="color: white") Other Sources For More Jobs
-					.col-md-6
-						a(href="https://linkedin.com").grow
+					.col-md-6.grow
+						a(href="https://linkedin.com")
 							img(src="/images/jobsearch1.jpg", style="width: 100%")
 							.inner-center-button LinkedIn
 					.col-md-6
