--- a/templates/views/jobsearch.pug
+++ b/templates/views/jobsearch.pug
@@ -21,18 +21,18 @@ block content
 						a(href="https://linkedin.com")
 							img(src="/images/jobsearch1.jpg", style="width: 100%")
 							.inner-center-button LinkedIn
-					.col-md-6
-						a(href="https://monster.com").grow
+					.col-md-6.grow
+						a(href="https://monster.com")
 							img(src="/images/jobsearch2.jpg", style="width: 100%")
 							.inner-center-button Monster
 			.row
 				.container
-					.col-md-6
-						a(href="https://indeed.com").grow
+					.col-md-6.grow
+						a(href="https://indeed.com")
 							img(src="/images/jobsearch3.jpg", style="width: 100%")
 							.inner-center-button Indeed
-					.col-md-6
-						a.grow(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
+					.col-md-6.grow
+						a(href="https://www.google.com/search?q=google+job+search&oq=google+job+search&aqs=chrome..69i57j69i60l2j69i59l2j69i64.2450j0j4&sourceid=chrome&ie=UTF-8")
 							img(src="/images/jobsearch4.jpg", style="width: 100%")
 							.inner-center-button Google Job Search
 		.row
