--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -147,3 +147,6 @@ ol.resformat > li {
 }
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.2); }
+.hero {
+	background-size: auto;
+}
