--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -147,6 +147,8 @@ ol.resformat > li {
 }
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.2); }
-.hero {
-	background-size: auto;
+@media only screen and (max-width: 500px) {
+	.hero {
+		background-size: 1300px;
+	}
 }
