--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -149,6 +149,6 @@ ol.resformat > li {
 .grow:hover { transform: scale(1.2); }
 @media only screen and (max-width: 500px) {
 	.hero {
-		background-size: 1300px;
+		background-size: 1300px !important;
 	}
 }
