--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -149,6 +149,9 @@ ol.resformat > li {
 .grow:hover { transform: scale(1.2); }
 @media only screen and (max-width: 500px) {
 	.hero {
-		background-size: 1300px !important;
+		padding: 20px !important;
+		background:no-repeat center center fixed;
+		height: 100%;
+
 	}
 }
