--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -29,7 +29,7 @@ block content
 					li Turn off your cell phone.
 					li Display confidence and end with a good impression.
 		.row
-			.container
+			.container(style="overflow: hidden;")
 				h1 Helpful Videos:
 				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/hcyKWsEL2XM', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/DHDrj0_bMQ0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
