--- a/templates/views/job.pug
+++ b/templates/views/job.pug
@@ -6,7 +6,7 @@ block intro
 	
 block content
 	.container
-		h1 This page is still under construction! Try Entering doctor, developer, or artist for sample results!
+		h1 This page is still under construction! Try Entering teacher, artist, or surgeon for sample results!
 		each job in jobs
 				.row
 					.col.s12.m7
