--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -146,7 +146,7 @@ ol.resformat > li {
 	padding: 20px;
 }
 .grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.2); }
+.grow:hover { transform: scale(1.2); z-index: 10000; }
 @media only screen and (max-width: 500px) {
 	.hero {
 		padding: 20px !important;
