--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -11,7 +11,7 @@ block content
 			.container
 				h3 Review common interview questions.
 				p Practice answering them with someone else or in front of a mirror. Come prepared with stories that relate to the skills that the employer is seeking.
-				p Figure out in advance how well you qualify for the job. For each requirement listed in the job posting, write down your qualifications. This can show you if you lack a particular skill. 
+				p Figure out in advance how qualified you are for the job. For each requirement listed in the job posting, write down your qualifications. This can show you if you lack a particular skill. 
 				h3 Make a list of questions that you would like to ask during the interview. 
 				p Pick questions that will demonstrate your interest in the job and the company. This might include commenting on the information you learned from the company website, and then asking a question related to it.
 	.container-fluid
