--- a/templates/views/interviews.pug
+++ b/templates/views/interviews.pug
@@ -31,6 +31,8 @@ block content
 		.row
 			.container(style="overflow: hidden;")
 				h1 Helpful Videos:
-				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/hcyKWsEL2XM', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
-				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/DHDrj0_bMQ0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+				.col-md-6
+					iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/hcyKWsEL2XM', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+				.col-md-6
+					iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/DHDrj0_bMQ0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
